--- a/package.json
+++ b/package.json
@@ -1,8 +1,32 @@
 {
+  "name": "jhon-bot",
+  "version": "0.1.0",
+  "description": "Gamster bot",
+  "scripts": {
+    "clean": "npm run clean:windows && npm run clean:linux",
+    "clean:windows": "node -e \"if (process.platform === 'win32') process.exit(1)\" || , if exist build rmdir /Q /S build",
+    "clean:linux": "node -e \"if (process.platform !== 'win32') process.exit(1)\" || rm -rf build",
+    "build": "tsc --build",
+    "start": "npm run build && node build/index.js",
+    "lint": "eslint . --ext .ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Alex31TheDev/jhon-bot.git"
+  },
+  "author": "yth0z, Alex31TheDev",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Alex31TheDev/jhon-bot/issues"
+  },
+  "homepage": "https://github.com/Alex31TheDev/jhon-bot#readme",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "minecraft-data": "^3.33.0",
-    "mineflayer": "^4.8.1",
-    "prismarine-item": "^1.12.1"
+    "mineflayer": "^4.8.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "eslint": "^8.41.0",
+    "typescript": "^5.0.4"
   }
 }
