--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,9 @@
         "sourceType": "module"
     },
     "rules": {
-        "semi": ["error", "always"],
         "quotes": ["error", "double"],
+        "semi": "off",
+        "@typescript-eslint/semi": ["error"],
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-explicit-any": 1,
         "@typescript-eslint/no-inferrable-types": [
