--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,7 @@ dist
 .tern-port
 
 # Stores VSCode versions used for testing VSCode extensions
+vscode/
 .vscode-test
 
 # yarn v2
@@ -131,3 +132,6 @@ dist
 
 #ts
 build/
+
+#auth
+src/config/auth.json
