--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean:windows": "node -e \"if (process.platform === 'win32') process.exit(1)\" || , if exist build rmdir /Q /S build",
     "clean:linux": "node -e \"if (process.platform !== 'win32') process.exit(1)\" || rm -rf build",
     "build": "tsc --build",
-    "start": "npm run build && node build/index.js",
+    "start": "npm run build && node build/src/index.js",
     "lint": "eslint . --ext .ts"
   },
   "repository": {
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/Alex31TheDev/jhon-bot#readme",
   "dependencies": {
-    "mineflayer": "^4.8.1"
+    "mineflayer": "^4.8.1",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.7",
