* Login System * Schimbat config,auth sa fie variabile publice * consoleischat (trb facut input listener sa poti trimite mesaje pe sv din consola)

--- a/config/config.json
+++ b/config/config.json
@@ -6,5 +6,6 @@
     "settings": {
         "toggletpa": false
     },
-    "logFile": "logs/debug.log"
+    "logFile": "logs/debug.log",
+    "consoleischat": false
 }
