--- a/config/config.json
+++ b/config/config.json
@@ -4,10 +4,9 @@
     "version": "1.12.2",
     "prefix": "!",
     "cliPrefix": ".",
-    "settings": {
-        "toggletpa": false
-    },
     "logFile": "logs/debug.log",
     "consoleIsChat": true,
-    "toggleTpa": false
+    "toggleTpa": false,
+    "enableChatCommands": true,
+    "enableCLICommands": true
 }
