Update eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,14 @@
             "ignoreParameters": true
           }
         ],
-        "@typescript-eslint/no-unused-vars": "warn"
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "warn",
+            { 
+              "argsIgnorePattern": "^_",
+              "varsIgnorePattern": "^_",
+              "caughtErrorsIgnorePattern": "^_"
+            }
+        ]
     }
 }
